User Coupon, CRUD functionalities and discount calculation
